# routes/api.php
@@ -15,15 +15,41 @@ use Illuminate\Http\Request;
 
 Route::resource('users', 'UserController');
 
-Route::get('user', 'UserController@show')->middleware('accesstoken');
+Route::group([
+    'prefix' => 'user',
+    'middleware' => 'accesstoken'
+], function () {
+
+    Route::get('/', 'UserController@show');
+
+    Route::get('roles', 'RoleController@show');
+
+    Route::post('roles', 'RoleController@attach');
+
+    Route::delete('roles/{slug}', 'RoleController@detach');
+
+});
+
+Route::get('event/list', 'EventController@index');
+
+Route::group([
+   'prefix' => 'event',
+    'middleware' => 'accesstoken'
+], function () {
+
+    Route::get('/', 'EventController@show');
+
+    Route::post('/', 'EventController@store');
+
+    Route::put('/{slug}', 'EventController@update');
+
+});
+
 
 Route::post('login', 'Auth\AuthController@login');
 Route::post('registration', 'Auth\AuthController@registration');
 
 Route::get('roles', 'RoleController@index');
-Route::get('users/{id}/roles', 'RoleController@show');
-Route::post('users/{id}/roles/', 'RoleController@attach');
-Route::delete('users/{id}/roles/{slug}', 'RoleController@detach');
 
 Route::get('artists', 'ArtistController@index');
 Route::get('users/{id}/artist', 'ArtistController@show');
